2005-11-14  Titus Brown  <t@issola.caltech.edu>

	* Added small section to README about 'nose' unit tests.

	* Cleaned up the 'myhttplib' WSGI intercept code & added a test.

2005-11-11  Titus Brown  <t@issola.caltech.edu>

	* Downgraded 0.8 version to 0.7.4.  RELEASE.

2005-11-10  Titus Brown  <t@issola.caltech.edu>

	* Moved 'test/' to 'tests/', added 'test-multisub.py',
	  moved 'twillserver.py' to 'twilltestserver.py', and fixed
	  it to run simple_server when executed from the command line.

	* Fixed two form submission bugs, pointed out by Mike Rovner.

2005-11-09  Titus Brown  <t@issola.caltech.edu>

	* Added William Volkman's patch fixing 'agent'.

2005-11-06  Titus Brown  <t@issola.caltech.edu>

	* Updated 'formvalue' and 'submit' help docs.

2005-11-05  Titus Brown  <t@issola.caltech.edu>

	* Added 'config' command, 'readonly_controls_writeable' option.
	  (James Cameron bug/fix)

	* Updated version numbers to 0.8.

	* Added command 'showlinks'.

	* Changed 'state' variable to 'browser' in commands.py

2005-11-04  Titus Brown  <t@issola.caltech.edu>

	* Put test/ tests into a nosetest-compatible format.  Yay,
	  unit tests!

2005-10-30  Titus Brown  <t@issola.caltech.edu>

	* Now catch errors from __ and $ eval failure (i.e. not in any
	  namespace) and reset the evaluation to just be the original name.
	  (bug reported by sureshvv).

2005-10-29  Titus Brown  <t@issola.caltech.edu>

	* Cleared content-type header in wwwsearch.zip, urllib2_support.py,
	  class HTTPRedirectHandler, redirect_request.  This fixes a bug
	  I noticed when testing collar: redirects inappropriately retain
	  content-type, and this breaks Quixote, at the least, when
	  enctype multipart/form-data is used in a POST prior to the
	  redirect.  (CTB: this should be dealt with more generally.)

	* Fixed back() behavior in _mechanize.  (I probably broke it in the
	  first place, sigh.)  Now accords with latest trunk _mechanize.py.
